--- a/src/components/login.css
+++ b/src/components/login.css
@@ -2,64 +2,97 @@
     width: 100%;
     height: 100vh;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    padding: 20px;
+
+    background: linear-gradient(to right top, #c0392b, #8e44ad);
 }
 
 .login-title {
+    justify-content: center;
+    color: #E0E0E0;
+    margin-top: 150px;
+    font-size: 4em;
 
 }
+
 
 .login-form {
+    position: relative;
     max-height: 500px;
-    max-width: 300px;
+    max-width: 350px;
     width: 100%;
     flex-direction: column;
+    margin-top: auto;
+    margin-bottom: 20px;
 }
+
+.login-form-background{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    filter: blur(4px);
+    background: #fff;
+}
+
 
 .form-input-wrapper {
     position: relative;
     height: 40px;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    justify-content: center;
 
     border-radius: 4px;
 }
 
 .form-input {
     width: 100%;
-    border-radius: 4px;
-    border: 1px solid #E0E0E0;
+    border: none;
+    border-bottom: 1px solid #E0E0E0;
+    background: transparent;
+    color: #E0E0E0;
+    font-family: MonsterratRegular;
+    font-size: 16px;
+    padding-left: 5px;
 }
 
-.form-input[type='text'], .form-input[type='password']{
-    padding-left: 45px;
-}
 
-.form-password:before, .form-username:before {
-    content: '';
+.form-label{
     position: absolute;
+    color: #E0E0E0;
+    opacity: 0.6;
+    left: 0;
+    top: 10px;
+    font-size: 16px;
+    pointer-events: none;
 
-    height: 40px;
-    width: 40px;
-
-    left: 0px;
-    top: 0;
-    background: #212121;
-    border-radius: 4px;
+    font-family: MonsterratRegular;
+    transition: 0.2s all ease-in-out;
 }
 
-.form-username:before {
-    background: url("../img/user.svg") no-repeat center center #4A148C;
-    background-size: 50%;
+.form-input:focus ~ .form-label, .form-input:valid ~ .form-label{
+    top: -15px;
+    opacity: 1;
 }
 
-.form-password:before {
-    background: url("../img/lock.svg") no-repeat center center #4A148C;
-    background-size: 50%;
-}
+
+
 
 .form-submit input[type='submit'] {
     font-family: MonsterratMedium;
+    border: none;
+    min-height: 50px;
+    border-radius: 40px;
+    margin-bottom: 0;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    color: #E0E0E0;
+    background: #7E57C2;
+}
+
+.form-submit input[type='submit']:hover{
+    background: #6A1B9A;
+    color: #F3E5F5;
 }
